fix(styles): link, fix img align [ci visual] (#3053)

--- a/src/styles/mixins/_mixins.scss
+++ b/src/styles/mixins/_mixins.scss
@@ -270,6 +270,10 @@
     color: var(--sapLinkColor);
     pointer-events: none;
   }
+
+  & > img {
+    vertical-align: bottom;
+  }
 }
 
 @mixin action-cursor {
